Mouth feel Ductile vs Brittle

--- a/talk_Zurich.tex
+++ b/talk_Zurich.tex
@@ -165,8 +165,48 @@ red!40!yellow,
 
 \setcounter{framenumber}{0}
 
+\begin{frame}{Mouth feel}
+\begin{columns}
+\column{0.8\textwidth}
+\begin{itemize}
+\item A very complex, multidimensional sensation
+\item Food behaviour at large deformation is important
+\item How does food break into pieces ?
+\end{itemize}
+\column{0.2\textwidth}
+\includegraphics[width=\textwidth]{violon}
+\end{columns}
 
-\begin{frame}{Application of biogels \textup{\normalsize(physical gels
+\bigskip
+\begin{columns}[T]
+\column{0.475\textwidth}
+\begin{block}{Ductile fracture}
+\includegraphics[height=5\baselineskip]{deflated_balloon}
+
+Irreversible deformation
+\begin{itemize}
+\item rubber
+\item lead
+\item butter
+\end{itemize}
+\end{block}
+
+\column{0.475\textwidth}
+\begin{block}{Brittle fracture}
+\includegraphics[height=6\baselineskip]{spaghetti_breaking}\hfill
+\includegraphics[height=6\baselineskip]{Tea_bowl_fixed_in_the_Kintsugi_method}
+\begin{itemize}
+\item concrete
+\item asphalt
+\item glass
+\end{itemize}
+
+\end{block}
+\end{columns}
+\end{frame}
+
+
+\begin{frame}{What about biogels? \textup{\normalsize(physical gels
 $E_{bond}\gg k_B T$)}}
 \begin{tabu}{cX[c]c}
 \includegraphics[height=0.3\textheight]{cell_mech} &
@@ -188,27 +228,27 @@ Wikimedia Commons & www.madaboutscience.com & www.keautystore.com\\
 \end{block}
 \end{footnotesize}
 \end{frame}
-
-
-
-\begin{frame}{Fundamental issues in biogels}
-\begin{itemize}
-\item Linear elasticity is not well understood \textit{\scriptsize Gardel et al. Science 2004}
-\item Strain and stress stiffening \textit{\scriptsize Storm et al. Nature 2005}
-\item Fractures \textit{\scriptsize Bonn et al. Science 1998, Baumberger et al. Nature Material 2006}
-\item Mechanical instabilities and morphogenesis \textit{\scriptsize Shyer et al. Science 2013}
-\end{itemize}
-\begin{tabu}{X[c]X[c]}
-\includegraphics[height=6\baselineskip]{Bonn_fracture} &
-\includegraphics[height=6\baselineskip]{Villi_sq}
-\end{tabu}
-\begin{block}{Our questions}
-\begin{itemize}
-\item What is the behaviour of a biogel under shear deep into the nonlinear regime?
-\item What is the role of the solvent in mechanical instabilities?
-\end{itemize}
-\end{block}
-\end{frame}
+%
+%
+%
+%\begin{frame}{Fundamental issues in biogels}
+%\begin{itemize}
+%\item Linear elasticity is not well understood \textit{\scriptsize Gardel et al. Science 2004}
+%\item Strain and stress stiffening \textit{\scriptsize Storm et al. Nature 2005}
+%\item Fractures \textit{\scriptsize Bonn et al. Science 1998, Baumberger et al. Nature Material 2006}
+%\item Mechanical instabilities and morphogenesis \textit{\scriptsize Shyer et al. Science 2013}
+%\end{itemize}
+%\begin{tabu}{X[c]X[c]}
+%\includegraphics[height=6\baselineskip]{Bonn_fracture} &
+%\includegraphics[height=6\baselineskip]{Villi_sq}
+%\end{tabu}
+%\begin{block}{Our questions}
+%\begin{itemize}
+%\item What is the behaviour of a biogel under shear deep into the nonlinear regime?
+%\item What is the role of the solvent in mechanical instabilities?
+%\end{itemize}
+%\end{block}
+%\end{frame}
 
 %\section{Our system: Yoghurt}
 
