Behaviour of the food

--- a/talk_Zurich.tex
+++ b/talk_Zurich.tex
@@ -179,8 +179,8 @@ red!40!yellow,
 \column{0.8\textwidth}
 \begin{itemize}
 \item A very complex, multidimensional sensation
-\item Food behaviour at large deformation is important
-\item How does food break into pieces ?
+\item Behaviour of the food at large deformation?
+\item How does food break into pieces?
 \end{itemize}
 \column{0.2\textwidth}
 \includegraphics[width=\textwidth]{violon}
