Biogel, food and coauthors at the end

--- a/talk_Zurich.tex
+++ b/talk_Zurich.tex
@@ -215,28 +215,7 @@ Irreversible deformation
 \end{frame}
 
 
-\begin{frame}{What about biogels? \textup{\normalsize(physical gels
-$E_{bond}\gg k_B T$)}}
-\begin{tabu}{cX[c]c}
-\includegraphics[height=0.3\textheight]{cell_mech} &
-\includegraphics[height=0.3\textheight]{electrophoresis} &
-\includegraphics[height=0.3\textheight]{cosmetics} \\
-Cell mechanics & Electrophoresis & Cosmetics\\
-\end{tabu}
-\begin{tabu}{X[c]X[c]}
-\includegraphics[height=0.3\textheight]{bacterial_culture} &
-\includegraphics[height=0.3\textheight]{food} \\
-Bacterial culture & Food\\
-\end{tabu}
 
-\begin{footnotesize}
-\begin{block}{Sources}
-\begin{tabu}{lXl}
-Wikimedia Commons & www.madaboutscience.com & www.keautystore.com\\
-\end{tabu}
-\end{block}
-\end{footnotesize}
-\end{frame}
 %
 %
 %
@@ -371,6 +350,50 @@ Wikimedia Commons & www.madaboutscience.com & www.keautystore.com\\
 
 \include{creep_beamer}
 
+\begin{frame}{Can we generalise to biogels? \textup{\normalsize(physical gels
+$E_{bond}\gg k_B T$)}}
+\begin{tabu}{cX[c]c}
+\includegraphics[height=0.3\textheight]{cell_mech} &
+\includegraphics[height=0.3\textheight]{electrophoresis} &
+\includegraphics[height=0.3\textheight]{cosmetics} \\
+Cell mechanics & Electrophoresis & Cosmetics\\
+\end{tabu}
+\begin{tabu}{X[c]X[c]}
+\includegraphics[height=0.3\textheight]{bacterial_culture} &
+\includegraphics[height=0.3\textheight]{food} \\
+Bacterial culture & Food\\
+\end{tabu}
+
+\begin{footnotesize}
+\begin{block}{Sources}
+\begin{tabu}{lXl}
+Wikimedia Commons & www.madaboutscience.com & www.keautystore.com\\
+\end{tabu}
+\end{block}
+\end{footnotesize}
+\end{frame}
+
+
+\begin{frame}{Merciless yoghurt breakers}
+\textit{Leocmach et al. PRL 113, 038303 (2014), \footnotesize ArXiv 1401.8234}
+
+\bigskip
+\begin{tabu}{X[c]X[c]c}
+\includegraphics[height=0.3\textheight]{Chris}&
+\includegraphics[height=0.3\textheight]{Thibaut}&
+\includegraphics[height=0.3\textheight]{Seb}\\
+Christophe Perge & Thibaut Divoux & Sebastien Manneville\\
+PhD student & CNRS researcher & Professor\\
+E.N.S. Lyon &  CRPP Bordeaux & E.N.S. Lyon\\
+\end{tabu}
+
+
+\bigskip
+\begin{description}[Special thanks]
+\item[Special thanks] to Alan Parker (Firmenich) for prompting this study and providing casein \& GDL
+\end{description} 
+
+\end{frame}
 
 
 \end{document}
